@@ -100,6 +100,52 @@ class TestWorkingTreeLocking(TestCaseWithWorkingTree):
         self.assertTrue(wt.branch.is_locked())
         wt.branch.unlock()
         
+    def _test_unlock_with_lock_method(self, methodname):
+        """Create a tree and then test its unlocking behaviour.
+
+        :param methodname: The lock method to use to establish locks.
+        """
+        # when unlocking the last lock count from tree_write_lock,
+        # the tree should do a flush().
+        # we test that by changing the inventory using set_root_id
+        tree = self.make_branch_and_tree('tree')
+        # prepare for a series of changes that will modify the 
+        # inventory
+        getattr(tree, methodname)()
+        # note that we dont have a try:finally here because of two reasons:
+        # firstly there will only be errors reported if the test fails, and 
+        # when it fails thats ok as long as the test suite cleanup still works,
+        # which it will as the lock objects are released (thats wher ethe 
+        # warning comes from.  Secondly, its hard in this test to be 
+        # sure that we've got the right interactions between try:finally
+        # and the lock/unlocks we are doing.
+        getattr(tree, methodname)()
+        # this should really do something within the public api
+        # e.g. mkdir('foo') but all the mutating methods at the
+        # moment trigger inventory writes and thus will not 
+        # let us trigger a read-when-dirty situation.
+        old_root = tree.get_root_id()
+        tree.set_root_id('new-root')
+        # to detect that the inventory is written by unlock, we
+        # first check that it was not written yet.
+        reference_tree = tree.bzrdir.open_workingtree()
+        self.assertEqual(old_root, reference_tree.get_root_id())
+        # now unlock the second held lock, which should do nothing.
+        tree.unlock()
+        reference_tree = tree.bzrdir.open_workingtree()
+        self.assertEqual(old_root, reference_tree.get_root_id())
+        # unlocking the first lock we took will now flush.
+        tree.unlock()
+        # and check it was written using another reference tree
+        reference_tree = tree.bzrdir.open_workingtree()
+        self.assertEqual('new-root', reference_tree.get_root_id())
+
+    def test_unlock_from_tree_write_lock_flushes(self):
+        self._test_unlock_with_lock_method("lock_tree_write")
+        
+    def test_unlock_from_write_lock_flushes(self):
+        self._test_unlock_with_lock_method("lock_write")
+        
     def test_unlock_branch_failures(self):
         """If the branch unlock fails the tree must still unlock."""
         # The public interface for WorkingTree requires a branch, but
